<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@drawable/border_design"
                android:weightSum="1">
                <TextView
                    android:id="@+id/topic_sub_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/antic"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Register"
                    android:textColor="@color/colorOrange"
                    android:textSize="20sp" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/define_class" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@id/logo"
                    android:layout_alignParentBottom="true"
                    android:fontFamily="@font/bungee"
                    android:gravity="left"
                    android:text="Define Classes"
                    android:textColor="@android:color/black"
                    android:textSize="32sp"  />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/antic"
                    android:gravity="left"
                    android:text="SignUp to Continue"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:id="@+id/errorMessage"
                    android:gravity="left"
                    android:text="Some Error Occured"
                    android:textColor="@color/colorRed"
                    android:visibility="gone"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/enter_name"
                        app:boxStrokeColor="#000"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUpName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:drawableStart="@drawable/email_focus"
                            android:drawablePadding="10dp"
                            android:focusable="true"
                            android:inputType="text"
                            android:padding="5dp"
                            android:maxLength="50"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/enter_mobile"
                        app:boxStrokeColor="#000"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text">

                        <EditText
                            android:id="@+id/signUp_Mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:drawableStart="@drawable/phone_focus"
                            android:drawablePadding="10dp"
                            android:focusable="true"
                            android:inputType="number"
                            android:padding="5dp"
                            android:maxLength="10"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/signup_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="57dp"
                        android:background="@drawable/button"
                        android:text="Register"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/goto_login"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button_gray"
                        android:text="Already User? Log In"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/forgetPassMSG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Successfully"
                    android:textColor="#08804c"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/forgetSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/enter_id"
                        app:boxStrokeColor="#000"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/forgetNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:drawableStart="@drawable/user_focus"
                            android:drawablePadding="10dp"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textColor="#000"
                            android:textSize="15dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/forget_btn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button"
                        android:text="Send Password"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>