<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_border"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/backTo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_baseline_backspace" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="5dp"
                android:text="Contact Us"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#10000000"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_margin="8dp"
                android:elevation="5dp"
                android:padding="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/enter_name"
                        app:boxStrokeColor="#000"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/contactName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:focusable="true"
                            android:inputType="text"
                            android:maxLength="50"
                            android:padding="5dp"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/contactName"
                        android:layout_marginTop="10dp"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/email"
                        app:boxStrokeColor="#000"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/contactEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/contactName"
                            android:layout_marginTop="20dp"
                            android:focusable="true"
                            android:inputType="text"
                            android:maxLength="50"
                            android:padding="5dp"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/enter_mobile"
                        app:boxStrokeColor="#000"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text">

                        <EditText
                            android:id="@+id/contactMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:focusable="true"
                            android:inputType="number"
                            android:padding="5dp"
                            android:maxLength="10"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/enter_message"
                        app:boxStrokeColor="#000"
                        app:boxStrokeWidthFocused="2dp">

                        <EditText
                            android:id="@+id/contactMessage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:focusable="true"
                            android:inputType="textMultiLine"
                            android:padding="5dp"
                            android:gravity="top"
                            android:lines="5"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <Button
                        android:id="@+id/contactData"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button"
                        android:text="Update"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="25sp" />
                    <TextView
                        android:id="@+id/errorMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="Some Error Occured"
                        android:textColor="@color/colorRed"
                        android:textSize="15sp"
                        android:visibility="gone"
                         />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#10000000"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_marginBottom="4dp"
                android:elevation="5dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/home_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_location" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/home_icon"
                        android:fontFamily="@font/bungee"
                        android:text="Head Office"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/home_icon"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@id/home_icon"
                        android:fontFamily="@font/antic"
                        android:text="F-123 &amp; 124 Somdutt Chambers's Bikaji Cama Place, New Delhi, India- 110066
011- 41414676, 9717321869"
                        android:textSize="18sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_marginBottom="4dp"
                android:elevation="5dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/home_icon1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_location" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/home_icon1"
                        android:fontFamily="@font/bungee"
                        android:text="Branch Office"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/home_icon1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@id/home_icon1"
                        android:fontFamily="@font/antic"
                        android:text="B-32-34, V. S. Tower Sec-3 A, Avas Vikas, Bodla, Sikandra, India-282007
\n0562-4309733, 9027770371, \n8171401403, 9717439636"
                        android:textSize="18sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_marginBottom="4dp"
                android:elevation="5dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/home_icon2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_email_orange" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/home_icon2"
                        android:fontFamily="@font/bungee"
                        android:text="Email Address"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/home_icon2"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@id/home_icon2"
                        android:fontFamily="@font/antic"
                        android:text="info@defineclasses.com"
                        android:textSize="18sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>